[package]
name = "learning-lsm-write-path"
version = "0.1.0"
edition = "2024"

[dependencies]
rocksdb = "0.24"
libc = "0.2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "write_path"
harness = false

[[bench]]
name = "param_test"
harness = false

[[bench]]
name = "pwrite_baseline"
harness = false
