[package]
name = "learning-lsm-write-path"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-skiplist = "0.1.3"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3.14"

[[bench]]
name = "write_path"
harness = false

[[bench]]
name = "write_path_skiplist"
harness = false

[[bench]]
name = "skiplist_raw"
harness = false
